Improve docs, use homedir for storing the ratings and default paths, add bin, update readme.md

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "nplay",
   "description": "MP3 player frontend for mpg123/mpg321",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "./nplay.js",
-  "devDependencies": { },
-  "private":true
+  "bin": { "nplay" : "./nplay.js" }
 }
