Add repository field

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "dependencies": {
     "keypress": "~0.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mixu/nplay.git"
   }
 }
