--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "nplay": "./nplay.js"
   },
   "dependencies": {
-    "keypress": "~0.1.0"
+    "keypress": "0.1.0",
+    "minitask": "~0.2.0"
   },
   "keywords": [
     "mp3",
