--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "nplay": "./nplay.js"
   },
   "dependencies": {
+    "chalk": "^0.5.1",
     "keypress": "0.1.0",
-    "minitask": "~0.2.0"
+    "pipe-iterators": "^1.1.0"
   },
   "keywords": [
     "mp3",
