--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "chalk": "^0.5.1",
     "keypress": "0.1.0",
     "pipe-iterators": "^1.1.0",
-    "timeago": "~0.2.0",
+    "timeago.js": "~2.0.3",
     "xtend": "^4.0.0"
   },
   "keywords": [
